fix img display ratio issue on mobile device

--- a/aden/css/main.css
+++ b/aden/css/main.css
@@ -7,6 +7,13 @@
     vertical-align: top;
 }
 
+@media screen and (max-width: 576px) {
+    .img-thumb {
+        width: 100%;
+        height: 100%;
+    }
+}
+
 .container-odd {
     background-color:#F3E5F5; /* Purple 50 */
     padding:20px;
